<resources>
    <string name="app_name">OCGreenSave</string>
    <string name="login_string">Welcome</string>
    <string name="login_description">"         Sign in to view your own personal stats and track your own contributions, or create an account with a username and password you want"</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_buton_text">Sign In</string>
    <string name="login_create_button">Create Profile</string>
    <string name="log_activity_title">Log Your Efforts</string>
    <string name="log_reset_button_text">Reset Counters</string>
    <string name="log_take_pic_string">Log Your Receipt</string>
    <string name="log_manually_create_log">Log using input</string>
    <string name="log_save_exit_text">Save and Exit</string>
    <string name="log_notice_text">"         Note: We will reset your counters but add them to the statistics page!"</string>
    <string name="log_button_descriptions">Take a picture of your receipt, or enter in values manually</string>
    <string name="adminTextView">Admin Options</string>
    <string name="editEmployees">Edit Employees</string>
    <string name="editScheduleButton">Edit Employee Schedule</string>
    <string name="logBaleButton">Log Bale</string>
    <string name="create_account_title">Create a Profile</string>
    <string name="create_account_username_hint">Desired Username</string>
    <string name="create_account_password_hint">Desired Password</string>
    <string name="create_account_password_confirm_hint">Confirm Password</string>
    <string name="create_account_button_text">Create Your Profile</string>
    <string name="count_activity_title">Enter lb</string>
    <string name="menu_activity_recycle_button_text">Recycle!</string>
    <string name="menu_activity_admin_button_text">Admin Options</string>
    <string name="menu_activity_logout_button_text">Log Out</string>
    <string name="admin_activity_mainmenu_button">Back to Main Menu</string>
    <string name="image_description_create_profile">back ground image for the create a acc</string>
    <string name="pull_up_photos_Button">View Recorded Photos</string>
    <string name="log_out_button_text">Log Out</string>
    <string name="log_new_recycle_button">Add Recycle Log</string>
    <string name="incorrect_input_Toast">Input log in credentials were incorrect, Please try again.</string>
    <string name="log_out_button_Text">Log Out</string>
    <string name="deleteLogText">Delete Log</string>
    <string name="passwordMatchError">Passwords did not match. Please Try again.</string>
    <string name="successfullyloggedOut">Logging out</string>
    <string name="username_taken_errorText">Username already exists. Please try again.</string>
    <string name="totalNewLog">Total:</string>
    <string name="ViewStatsButton">View Stats</string>
    <string name="BackToMenuFromDetailsButton">Back to Main Menu</string>
    <string name="find_us_text">Find Us!</string>
    <string name="contact_info">Hours/Availability</string>
    <string name="usernameForStats">Username: </string>
    <string name="yourStatsPounds">Your Total amount Recycled lb(s) :</string>
    <string name="yourStatsMoneyEarned">Your Earned amount: </string>
    <string name="yourStatsEnergySaved">Your energy saved: watts </string>
    <string name="saveChanges">Save Changes</string>
    <string name="InstructionsForDeletionTextView">Press and hold down the log you wish to delete..</string>
    <string name="successfullyDeletedSelectedItems">Successfully saved Logs</string>
    <string name="failedDeletedSelectedItems">No changes to save</string>
    <string name="contact_infoALLINFO">WebSite: orangecoastcollege.edu  Phone Number(714) 432-5131  Friday 9AM–5PM   Saturday 9AM–5PM  Sunday Closed  Monday 9AM–5PM  Tuesday 9AM–5PM  Wednesday 9AM–5PM  Thursday 9AM–5PM</string>
    <string name="backToMap">Back to maps</string>
    <string name="Gallons">Gallons </string>
    <string name="MTCCO2" translatable="false">MTCO2e</string>
    <string name="AmountTonsRecycled">Amount of Tons recycled:</string>
    <string name="GasConserved">Gallons of Gasoline Conserved:</string>
    <string name="AlluminumGasText">Aluminum Recycled: </string>
    <string name="allText">If it was all</string>
    <string name="GlassGasText">Glass Recycled: </string>
    <string name="HDPEGasText">HDPE Plastic Recycled: </string>
    <string name="PETGasText">PET Plastic Recycled:</string>
    <string name="CO2Conserved">Metric tons of CO2 Conserved:</string>
    <string name="AlluminumCO2Text">Aluminum Recycled: </string>
    <string name="GlassCO2Text">Glass Recycled: </string>
    <string name="HDPECO2Text">HDPE Plastic Recycled: </string>
    <string name="PETCO2Text">PET Plastic Recycled:</string>
    <string name="emailStats">Email Stats</string>
    <string name="count_individual">Tap the images for one count</string>
    <string name="CountInstructionTextView">Tap the images to up the count</string>
    <string name="CountTitle">Count Individual Material</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
