<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme"
    android:orientation="vertical"

    tools:context=".CreateProfileActivity"
    android:padding="15dp">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.33"
        android:contentDescription="@string/image_description_create_profile"
        android:src="@drawable/default_profile_image" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_title"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/createProfileUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/create_account_username_hint"
        android:textColor="@color/black"
        android:layout_centerInParent="true" /> <requestFocus/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_password_hint"
        android:textColor="@color/black"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@id/createProfileUsernameEditText"
        android:id="@+id/createProfilePasswordEditText"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_password_confirm_hint"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_below="@+id/createProfilePasswordEditText"
        android:id="@+id/createProfilePassword2EditText"
        android:layout_marginTop="5dp" />

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:onClick="createAccountButtonClick"
        android:padding="20dp"
        android:text="@string/create_account_button_text"
        android:id="@+id/button" />

    <Button
        android:id="@+id/backToLogInButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="HandleBackToLoginClick"
        android:text="Back to Login" />

</RelativeLayout>
