<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    tools:context="dreyna.tong.userocgs.ContactActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_weight="1"
        android:background="@android:drawable/title_bar"
        android:backgroundTint="@color/black"
        android:text="@string/contact_info"
        android:textColor="@color/colorAccent"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/ContactInformation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/contact_infoALLINFO"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/backtoLoginButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="backtoMap"
        android:text="@string/backToMap" />
</LinearLayout>
