<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dreyna.tong.userocgs.MainMenuActivity">

    <Button
        android:id="@+id/addRecycleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="HandleRecycleButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:text="@string/log_new_recycle_button" />

    <Button
        android:id="@+id/deleteLogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addRecycleButton"
        android:onClick="deleteLogMenuButtonClick"
        android:text="@string/deleteLogText" />

    <ListView
        android:id="@+id/listViewMainMenu"
        android:layout_width="match_parent"
        android:layout_height="300dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/deleteLogButton" />

    <Button
        android:id="@+id/logOutButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="logOutOnClick"
        android:text="@string/log_out_button_text" />

    <Button
        android:id="@+id/button2"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ViewStatsButtonOnClick"
        android:layout_above="@+id/logOutButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/ViewStatsButton" />

</RelativeLayout>
