<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewLogActivity"
    android:padding="15dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@id/textView9"
        android:columnCount="3"
        android:rowCount="6">

        <Button
            android:id="@+id/saveLogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="5"
            android:hint="count"
            android:onClick="saveLogToDatabase"
            android:text="@string/log_save_exit_text" />

        <TextView
            android:id="@+id/pricedAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="40dp"
            android:layout_row="5"
            android:layout_marginTop="10dp"
            android:text="$0.00" />

        <EditText
            android:id="@+id/PETPlasticEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="30dp"
            android:layout_row="4"
            android:ems="10"
            android:hint="@string/count_activity_title"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/HDPEPlasticEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="30dp"
            android:layout_row="3"
            android:ems="10"
            android:hint="@string/count_activity_title"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/bimetalEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="30dp"
            android:layout_row="2"
            android:ems="10"
            android:hint="@string/count_activity_title"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/glassEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="30dp"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/count_activity_title"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/aluminumPoundsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="30dp"
            android:layout_row="0"
            android:ems="10"
           android:textSize="15sp"
            android:hint="@string/count_activity_title"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginTop="10dp"

            android:layout_row="5"
            android:text="@string/totalNewLog" />

        <TextView
            android:id="@+id/plasticpetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="30dp"
            android:layout_row="4"
            android:text="(PET) Plastic Amount: " />

        <TextView
            android:id="@+id/plasticHDPETextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="30dp"
            android:layout_row="3"
            android:text="(HDPE) Plastic Amount:" />

        <TextView
            android:id="@+id/bimetalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="30dp"
            android:layout_row="2"
            android:text="Bi-metal in Amount:" />

        <TextView
            android:id="@+id/glasspoundsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="30dp"
            android:layout_row="1"
            android:text="Glass Amount:" />

        <TextView
            android:id="@+id/aluminumpoundsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="30dp"
            android:layout_row="0"
            android:text="Aluminum Amount:" />

        <ImageView
            android:id="@+id/aluminumImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="0"
            android:src="@drawable/aluminum" />

        <ImageView
            android:id="@+id/glassImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="1"
            android:src="@drawable/glass" />

        <ImageView
            android:id="@+id/bimetalimageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="2"
            android:src="@drawable/penny" />

        <ImageView
            android:id="@+id/plastichdpeImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="3"
            android:src="@drawable/hdpeplastic" />

        <ImageView
            android:id="@+id/plasticPetImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="4"
            android:src="@drawable/petbottle" />

        <ImageView
            android:id="@+id/logRecieptImageView"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_row="5"
            android:clickable="true"
            android:onClick="pictureLogSave"
            android:src="@drawable/receipt_icon" />
    </GridLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Aluminum $1.58/LB  |  Glass $0.104/ LB  |   Bi-Metal   $0.34 / LB  |  Plastic #1 (PET)  $1.23 /LB  |  Plastic #2 (HDPE) $0.56 / LB"
        android:textSize="12sp" />
</RelativeLayout>
